syntax = "proto3";
//触发条件
package scene;
option go_package="./pb/rule";

message SceneTerm{
  string column =1;//触发类型 device: 设备触发 timer: 定时触发 manual:手动触发
  string value =2;//条件值
  string type =3;//多个条件关联类型  or  and
  string termType =4;//动态条件类型  eq: 相等  not:不相等  btw:在xx之间  gt: 大于  gte:大于等于 lt:小于  lte:小于等于   in:在xx值之间
  repeated SceneTerm terms =5;//嵌套条件
}
