syntax = "proto3";
//触发器
package scene;
option go_package="./pb/rule";

message SceneTrigger{
  string type =1;//触发类型 device: 设备触发 timer: 定时触发 manual:手动触发
  SceneTriggerDevice device = 2;
}

//设备触发
message SceneTriggerDevice{
    string productID = 1;//产品id
    string selector = 2;//设备选择方式  all: 全部 fixed:指定的设备
    repeated string selectorValues = 3; //选择的列表  选择的列表, fixed类型是设备名列表
  SceneTriggerDeviceOperation operation =4;

}
message SceneTriggerDeviceOperation {
  string operator =1 ;//触发类型  online:上线 offline:下线 reportProperty:属性上报 reportEvent: 事件上报
}

